kubernetes/production/nextjs/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tennis-tracker-nextjs
  namespace: tennis-tracker
  labels:
    app: tennis-tracker-nextjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tennis-tracker-nextjs
  template:
    metadata:
      labels:
        app: tennis-tracker-nextjs
    spec:
      containers:
        - name: tennis-tracker-nextjs
          image: ghcr.io/digitale-kumpel/tennis-tracker:nextjs-v0.0.2
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
