kubernetes/production/nextjs/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tennis-tracker-service
  namespace: tennis-tracker
spec:
  selector:
    app: tennis-tracker-nextjs
  ports:
    - port: 3000
      targetPort: 3000
