kubernetes/production/nextjs/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tennis-tracker-ingress
  namespace: tennis-tracker
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - tennis.kumpel.cloud
      secretName: tennis-tracker-tls
  rules:
    - host: tennis.kumpel.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tennis-tracker-service
                port:
                  number: 3000
